# Final-4team-icebang

./: .gitignore  CONTRIBUTING.md
.github/: pull_request_template.md  release-drafter-pre-processing.yml  release-drafter-user-service.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: follow-up.md  버그-리포트.md
.github/workflows/: ci-java.yml  ci-python.yml  deploy-fastapi.yml  deploy-java.yml  release-drafter.yml
apps/pre-processing-service/: .dockerignore  Dockerfile  pyproject.toml
apps/pre-processing-service/app/: main.py  ssadagu-crawl-ai.py
apps/pre-processing-service/app/api/: __init__.py  router.py
apps/pre-processing-service/app/api/endpoints/: blog.py  embedding.py  keywords.py  match.py  ocr.py  processing.py  product.py  sample.py  search.py  similarity.py  test.py
apps/pre-processing-service/app/config/logging/: DatabaseLogger.py  RepositoryLogger.py  ServiceLogger.py  ServiceLoggerMiddleware.py
apps/pre-processing-service/app/core/: config.py  decorators.py  logging_config.py
apps/pre-processing-service/app/db/: AsyncPostgreSQLManager.py  PostgreSQLManager.py  db_connecter.py  mariadb_manager.py
apps/pre-processing-service/app/decorators/: logging.py
apps/pre-processing-service/app/errors/: BlogPostingException.py  CrawlingException.py  CustomException.py  OCRException.py  handlers.py  messages.py
apps/pre-processing-service/app/middleware/: BackServiceLoggerDependency.py  RepositoryLoggerMiddleware.py  ServiceLoggerMiddleware.py  logging.py  loki_logger.py  rds_logger.py
apps/pre-processing-service/app/model/: execution_log.py  schemas.py
apps/pre-processing-service/app/service/: blog_post_service.py  crawl_service.py  crawling_service.py  keyword_service.py  match_service.py  naver_blog_post_service.py  product_blog_posting_service.py  product_selection_service.py  s3_upload_service.py  search_service.py  similarity_service.py  tistory_blog_post_service.py
apps/pre-processing-service/app/service/blog/: base_blog_post_service.py  blog_create_service.py  blog_post_adapter.py  blog_post_service_factory.py  blog_publish_service.py  blog_service_factory.py  blogger_blog_post_adapter.py  blogger_blog_post_service.py  naver_blog_post_service.py  tistory_blog_post_service.py
apps/pre-processing-service/app/service/blog/adapters/: api_blog_adapter.py  blogger_blog_adapter.py  naver_blog_adapter.py  selenium_blog_adapter.py  tistory_blog_adapter.py
apps/pre-processing-service/app/service/crawlers/: base_crawler.py  detail_crawler.py  search_crawler.py
apps/pre-processing-service/app/service/ocr/: ChineseOCRTranlator.py  ChineseOCRTranslator.py  OCRTranslator.py  S3OCRProcessor.py  S3Service.py
apps/pre-processing-service/app/services/: ChunkingService.py
apps/pre-processing-service/app/test/: test_blog_create_service.py  test_extraction_html.py  test_keyword.py  test_mariadb_connection.py  test_match_service.py  test_product_blog_posting_service.py  test_sadagu_crawl.py  test_search_service.py  test_service_logger.py  test_similarity_service.py
apps/pre-processing-service/app/utils/: crawler_util.py  crawler_utils.py  crawling_util.py  keyword_matcher.py  llm_extractor.py  preprocess_html.py  response.py  s3_upload_util.py  similarity_analyzer.py
apps/user-service/: Dockerfile  build.gradle  settings.gradle
docker/local/: docker-compose.yml  promtail-config.yml
docker/production/: Caddyfile  agent-config.yml  docker-compose.yml  (+1 more)
docker/production-fastapi/: agent-config.yml  docker-compose.yml  promtail-config.yml
jenkins/: README.md  java-ci-freestyle.sh  java-deploy-freestyle.sh  python-ci-freestyle.sh  python-deploy-freestyle.sh
(+415 files in other folders)
