[project]
name = "pre-processing-service"
version = "0.1.0"
description = ""
authors = [
    {name = "skip"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "selenium (>=4.35.0,<5.0.0)",
    "transformers (>=4.56.0,<5.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "mecab-python3 (>=1.0.10,<2.0.0)",
    "python-mecab-ko (>=1.3.7,<2.0.0)",
    "python-mecab-ko-dic (>=2.1.1.post2,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
